# mutapath

./: .bandit  .cirun.yml  .gitignore  .green  .packj.yml  .readthedocs.yml  .tidelift.yml  CODE_OF_CONDUCT.md  Pipfile  README.md  SECURITY.md  codecov.yml  pyproject.toml  renovate.json  setup.cfg  setup.py
.circleci/: config.yml
.dependabot/: config.yml
.github/: dependabot.yml  release.yml  renovate.json  semantic.yml
.github/workflows/: advisor.yml  audit.yml  black.yml  build.yml  codeql.yml  confirm-black.yml  enforce-black.yml  install-black.yml  publish.yml
docs/: Pipfile  attributes.py  requirements.txt  setup.py  setup_helper.py
docs/source/: conf.py  index.rst
docs/source/_templates/: class.rst
docs/source/static/: style.css
mutapath/: __init__.py  decorator.py  defaults.py  exceptions.py  immutapath.py  lock_dummy.py  mutapath.py  test_immutapath.py  test_mutapath.py
tests/: helper.py  serializable.py  test_immutapath.py  test_mutapath.py  test_serializable.py  test_with_path.py
